force-app/main/objects/Flat__c.object
<CustomObject>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <description>This field stores the number of bathrooms in the flat.</description>
        <inlineHelpText>This field stores the number of bathrooms in the flat.</inlineHelpText>
        <label>Bathrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>This field stores the building of the flat.</description>
        <inlineHelpText>This field stores the building of the flat.</inlineHelpText>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Flats</relationshipLabel>
        <relationshipName>Flats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>This field stores the floor number of the flat.</description>
        <inlineHelpText>This field stores the floor number of the flat.</inlineHelpText>
        <label>Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnishing__c</fullName>
        <label>Furnishing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not furnished</fullName>
                </value>
                <value>
                    <fullName>Semi-furnished</fullName>
                </value>
                <value>
                    <fullName>Fully Furnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Balcony__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Balcony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <label>Number of Rooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacant</fullName>
                    <default>true</default>
                    <label>Vacant</label>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flat</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Status__c</columns>
        <columns>Floor__c</columns>
        <columns>Furnishing__c</columns>
        <columns>Number_of_Rooms__c</columns>
        <columns>Bathrooms__c</columns>
        <columns>Has_Balcony__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Occupied_Flats</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Status__c</columns>
        <columns>Floor__c</columns>
        <columns>Furnishing__c</columns>
        <columns>Number_of_Rooms__c</columns>
        <columns>Bathrooms__c</columns>
        <columns>Has_Balcony__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </filters>
        <label>Occupied Flats</label>
    </listViews>
    <listViews>
        <fullName>Vacant_Flats</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Floor__c</columns>
        <columns>Furnishing__c</columns>
        <columns>Number_of_Rooms__c</columns>
        <columns>Bathrooms__c</columns>
        <columns>Has_Balcony__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Vacant</value>
        </filters>
        <label>Vacant Flats</label>
    </listViews>
    <nameField>
        <label>Flat Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Balcony_should_not_be_on_floor_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Has_Balcony__c , Floor__c = 1 )</errorConditionFormula>
        <errorDisplayField>Has_Balcony__c</errorDisplayField>
        <errorMessage>Balcony not available on floor 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Floor_Number</fullName>
        <active>true</active>
        <errorConditionFormula>Floor__c &gt; Building__r.Number_Of_Floors__c</errorConditionFormula>
        <errorDisplayField>Floor__c</errorDisplayField>
        <errorMessage>Invalid Floor Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Max_No_Of_Flats</fullName>
        <active>true</active>
        <errorConditionFormula>Building__r.Number_Of_Flats__c  &gt;=  Building__r.Maximum_Number_of_Flats__c</errorConditionFormula>
        <errorMessage>You Can&apos;t Add Flat to the building as Maximum Limit of Flats in the building is reached.</errorMessage>
    </validationRules>
</CustomObject>